--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(204, 157, 248);
+    background-color: rgb(157, 174, 248);
 }
 
 main {
@@ -13,4 +13,28 @@ main {
     margin: auto;
     padding: 10px;
     box-shadow: rgb(0, 0, 0, 0.473);
+}
+
+h1 {
+    font-size: 2em;
+    color: rgb(58, 0, 112);
+}
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 112);
+}
+
+img.lado {
+    float: right;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(26, 26, 255);
 }
